# n8n-cli

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
n8n_cli/: __init__.py  main.py
n8n_cli/api/: capabilities.py  errors.py  frontend.py  public.py  transport.py
n8n_cli/commands/: _stubs.py  auth.py  connection.py  credential.py  execdata.py  execution.py  folder.py  instance.py  node.py  pindata.py  project.py  setup.py  workflow.py
n8n_cli/config/: instance.py  sessions.py  store.py
n8n_cli/core/: cred_types.py  dotset.py  node_types.py  patcher.py  paths.py  refs.py  runpath.py
n8n_cli/models/_generated/: __init__.py  variable.py
n8n_cli/output/: jsonout.py  schema_infer.py  summarize.py
n8n_cli/resources/: SKILL.md  __init__.py  claude-md-snippet.md  slash-n8n.md
tests/acceptance/: test_success_criteria.py
tests/integration/: conftest.py  test_editing.py  test_executions.py  test_workflow_read.py
tests/integration/cassettes/: editing_full_cycle.yaml  execution_list.yaml  workflow_get.yaml  workflow_list.yaml  workflow_ping.yaml
tests/unit/: test_auth_jwt.py  test_cli_help.py  test_config_store.py  test_cred_types.py  test_dotset.py  test_frontend_api.py  test_frontend_run.py  test_node_types.py  test_patcher.py  test_paths.py  test_redactor.py  test_refs.py  test_runpath.py  test_schema_infer.py  test_sessions.py  test_setup_command.py  test_summarize.py  test_transport.py  test_workflow_views.py
